# AGonPostProcessing

./: .gitignore  CMakeLists.txt
data/: My_camera_calib.txt  NanoTarget_20251022_Set1and2.txt  SphMotorAngles_BitaFogra.txt  analyzeGeometries.txt
include/: ImageProcessor.h  ROISelector.h  SpectralReconstructor.h
src/: ImageProcessor.cpp  ImageProcessor.h  ROISelector.cpp  SpectralReconstructor.cpp  main.cpp
